--- a/index.html
+++ b/index.html
@@ -395,12 +395,12 @@
 }
 .slider {
   background: transparent;
-  box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.125);
+  box-shadow: transparent;
   height: 100px;
   margin: auto;
   overflow: hidden;
   position: relative;
-  width: 630px;
+  width: 650px;
 }
 .slider::before, .slider::after {
   background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 0) 100%);
@@ -424,11 +424,11 @@
   -webkit-animation: scroll 40s linear infinite;
           animation: scroll 40s linear infinite;
   display: flex;
-  width: calc(85px * 14);
+  width: calc(250px * 14);
 }
 .slider .slide {
   height: 100px;
-  width: 250px;
+  width: 100px;
 }
 /* cBanner End */
 
@@ -723,43 +723,43 @@
                                     <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-11.png"  height="85" width="85" alt="" />
                                 </div>
                                 <div class="slide">
-                                    <!--<img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-20.png" height="85" width="85" alt="" />-->
+                                    <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-10.png" height="85" width="85" alt="" />
                                 </div>
                                 <div class="slide">
                                     <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-13.png" height="85" width="85" alt="" />
                                 </div>
                                 <div class="slide">
-                                    <!--<img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-21.png" height="85" width="85" alt="" />-->
+                                    <img src="https://img.icons8.com/external-flat-icons-maxicons/85/external-ancient-the-lost-world-flat-flat-icons-maxicons-20.png"  height="85" width="85" alt="" />
                                 </div>
                                 <div class="slide">
                                     <img src="https://img.icons8.com/external-flat-icons-maxicons/85/external-ancient-the-lost-world-flat-flat-icons-maxicons-8.png"  height="85" width="85" alt="" />
                                 </div>
                                 <div class="slide">
-                                    <!--<img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-20.png" height="85" width="85" alt="" />-->
+                                    <img  src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-24.png" height="85" width="85" alt="" />
                                 </div>
                                 <div class="slide">
                                     <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-20.png" height="85" width="85" alt="" />
                                 </div>
                                 <div class="slide">
-                                    <!--<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />-->
+                                    <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-5.png"  height="100" width="250" alt="" />
                                 </div>
                                 <div class="slide">
-                                    <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-20.png" height="85" width="85" alt="" />
+                                    <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-21.png"  height="85" width="85" alt="" />
                                 </div>
                                 <div class="slide">
-                                    <!--<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />-->
+                                    <img src="https://img.icons8.com/external-flat-icons-maxicons/85/external-ancient-the-lost-world-flat-flat-icons-maxicons-12.png"  height="85" width="85" alt="" />
                                 </div>
                                 <div class="slide">
-                                    <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-20.png" height="85" width="85" alt="" />
+                                    <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-12.png" height="85" width="85" alt="" />
                                 </div>
                                 <div class="slide">
-                                    <!--<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />-->
+                                    <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-16.png" height="85" width="85" alt="" />
                                 </div>
                                 <div class="slide">
-                                    <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-20.png" height="85" width="85" alt="" />
+                                    <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-11.png"  height="85" width="85" alt="" />
                                 </div>
                                 <div class="slide">
-                                    <!--<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />-->
+                                    <img src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-18.png"  height="85" width="85" alt=""/>
                                 </div>
                             </div>
                         </div>
