--- a/index.html
+++ b/index.html
@@ -621,12 +621,13 @@
                         <img class="img-fluid" src="img/Argentinosaurus.jpg" alt="">
                         <div class="owl-carousel-text">
                             <h1 class="display-1 text-white mb-0">Argentinosaurus</h1>
+                            
                         </div>
                     </div>
                     <div class="owl-carousel-item position-relative">
                         <img class="img-fluid" src="img/Pterosaur.jpg" alt="">
                         <div class="owl-carousel-text">
-                            <h1 class="display-1 text-white mb-0">Pterosaur</h1>
+                            <a href="https://taxian.my.canva.site/pterosaur"><h1 class="display-1 text-white mb-0">Pterosaur</h1></a>
                         </div>
                     </div>
                 </div>
