--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                     <div class="owl-carousel-item position-relative">
                         <img class="img-fluid" src="img/Pterosaur.jpg" alt="">
                         <div class="owl-carousel-text">
-                            <a href="https://taxian.my.canva.site/pterosaur"><h1 class="display-1 text-white mb-0">Pterosaur</h1></a>
+                            <a href="https://taxian.my.canva.site/pterosaurs"><h1 class="display-1 text-white mb-0">Pterosaur</h1></a>
                         </div>
                     </div>
                 </div>
