--- a/index.html
+++ b/index.html
@@ -614,13 +614,13 @@
                     <div class="owl-carousel-item position-relative">
                         <img class="img-fluid" src="img/Mosasaurus.jpg" alt="">
                         <div class="owl-carousel-text">
-                            <a href="https://taxian.my.canva.site/daf6qxtz8yi"><h1 class="display-1 text-white mb-0">Mosasaurus</h1></a>
+                            <a href="https://taxian.my.canva.site/daf6qxtz8yi"><h1 class="display-1 text-white mb-0">Mosasaur</h1></a>
                         </div>
                     </div>
                     <div class="owl-carousel-item position-relative">
                         <img class="img-fluid" src="img/Argentinosaurus.jpg" alt="">
                         <div class="owl-carousel-text">
-                            <h1 class="display-1 text-white mb-0">Argentinosaurus</h1>
+                            <h1 class="display-1 text-white mb-0">Titanosaur</h1>
                             
                         </div>
                     </div>
