--- a/index.html
+++ b/index.html
@@ -620,8 +620,7 @@
                     <div class="owl-carousel-item position-relative">
                         <img class="img-fluid" src="img/Argentinosaurus.jpg" alt="">
                         <div class="owl-carousel-text">
-                            <h1 class="display-1 text-white mb-0">Titanosaur</h1>
-                            
+                            <a href="https://taxian.my.canva.site/titanosaur"><h1 class="display-1 text-white mb-0">Titanosaur</h1></a>
                         </div>
                     </div>
                     <div class="owl-carousel-item position-relative">
